# MEDimage

./: .gitignore  .readthedocs.yaml  LICENSE.md  Makefile.mk  README.md  environment.yml  pyproject.toml  python.md  requirements.txt  requirements_ext.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
Glioma-Demo/: Glioma-Tutorial.ipynb
Glioma-Demo/.ipynb_checkpoints/: Glioma-Tutorial-checkpoint.ipynb
Glioma-Tutorial/: Glioma-Tutorial.ipynb
Glioma-Tutorial/settings/: Extraction_Glioma.json
IBSI-TESTs/: ibsi1p1.ipynb  ibsi1p2.ipynb  ibsi2p1.ipynb  ibsi2p2.ipynb
IBSI-TESTs/settings/: IBSI2Phase2B_settings.json  Phase1_settings.json  Phase2C_settings.json  Phase3_settings.json
MEDimage/: Filter.py  MEDimage.py  MEDimageComputeRadiomics.py  MEDimageFilter.py  MEDimageProcessing.py  MEDscan.py  __init__.py
MEDimage-Tutorial/: MEDimage-Tutorial.ipynb
MEDimage-Tutorial/settings/: MEDimage-Tutorial.json
MEDimage/biomarkers/: BatchExtractor.py  BatchExtractorTexturalFilters.py  __init__.py  diagnostics.py  findIX.py  findVX.py  gclm_CrossDiagProb.py  gclm_DiagProb.py  getAreaDensApprox.py  getAxisLengths.py  getCOM.py  getGLCMfeatures.py  getGLCMmatrix.py  getGLDZMfeatures.py  getGLDZMmatrix.py  getGLRLMfeatures.py  getGLRLMmatrix.py  getGLSZMfeatures.py  getGLSZMmatrix.py  getGearyC.py  getGlobPeak.py  getIntHistFeatures.py  getIntVolHistFeatures.py  getLocIntFeatures.py  getLocPeak.py  getMax3Ddiam.py  getMesh.py  getMeshArea.py  getMeshVolume.py  getMoranI.py  getMorphFeatures.py  getNGLDMfeatures.py  getNGLDMmatrix.py  getNGTDMfeatures.py  getNGTDMmatrix.py  getOrientedBoundBox.py  getStatsFeatures.py  get_geary_c.py  get_glcm_matrix.py  get_gldzm_matrix.py  (+22 more)
MEDimage/filter/: MEDimageFilter.py  __init__.py  apply_filter.py  apply_mean.py  gabor.py  laws.py  mean.py
MEDimage/filters/: TexturalFilter.py  __init__.py  apply_filter.py  gabor.py  laws.py  log.py  mean.py  textural_filters_kernels.py  utils.py  wavelet.py
MEDimage/learning/: DataCleaner.py  DesignExperiment.py  FSR.py  Normalization.py  RadiomicsLearner.py  Results.py  Stats.py  __init__.py  cleaning_utils.py  ml_utils.py
MEDimage/processing/: __init__.py  computeBoundingBox.py  computeBox.py  computeROI.py  computeSUVmap.py  compute_bounding_box.py  compute_box.py  compute_roi.py  compute_suv_map.py  cropBox.py  crop_box.py  discretisation.py  equalization.py  findContour.py  findSpacing.py  find_spacing.py  getDiagFeatures.py  getMask.py  getPolygonMask.py  getROI.py  getROI_fromIndexes.py  getSepROInames.py  get_diag_features.py  get_polygon_mask.py  get_roi.py  get_roi_from_indexes.py  get_sep_roi_names.py  interpVolume.py  interp_volume.py  interpolation.py  outlierReSeg.py  outlier_re_seg.py  process_dicom.py  process_dicom_scan_files.py  rangeReSeg.py  range_re_seg.py  resegmentation.py  roiExtract.py  roi_extract.py  segmentation.py
MEDimage/utils/: ImageVolumeObj.py  Image_volume_obj.py  WriteLogFile.py  __init__.py  batchPatients.py  batch_patients.py  combineSlices.py  combine_slices.py  create_radiomics_table.py  data_frame_export.py  find_process_names.py  getFilePaths.py  getInstitutions_fromIDs.py  getPatientNames.py  getRadiomicNames.py  get_file_paths.py  get_full_rad_names.py  get_patient_names.py  (+26 more)
demo/: Glioma-Tutorial.ipynb
docs/: FAQs.rst  Installation.rst  License.rst  MEDimage.rst  MEDscan.rst  biomarkers.rst  conf.py  configuration_file.rst  configurations_file.rst  csv_file.rst  extraction_config.rst  filters.rst  index.rst  input_data.rst  learning.rst  learning_config.rst  modules.rst  processing.rst  tutorials.rst  utils.rst  wrangling.rst
ibsi/: ibsi1p1.ipynb  ibsi1p2.ipynb  ibsi2p1.ipynb  ibsi2p2.ipynb
notebooks/: README.md
scripts/: download_data.py  process_dataset.py
tests/: __init__.py  test_extraction.py  test_filtering.py
(+163 files in other folders)
