[tool.poetry]
name = "medimage-pkg"
version = "0.9.4"
description = "MEDimage is a Python package for processing and extracting features from medical images"
authors = ["MEDomics Consortium <medomics.info@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/medomics/MEDomicsLab-develop"
repository = "https://github.com/medomics/MEDomicsLab-develop"
keywords = ["python", "ibsi", "medical-imaging", 
            "cancer-imaging-research", "radiomics", 
            "medical-image-analysis", "features-extraction", 
            "radiomics-extraction", "radiomics-features", "radiomics-analysis"]
packages = [ {include = "MEDimage"} ]

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.10"
numpy = "*"
isort = "*"
ipykernel = "*"
ipywidgets = "*"
jupyter = "*"
matplotlib = "*"
networkx = "*"
neuroCombat = "*"
nibabel = "*"
nilearn = "*"
numpyencoder = "*"
pandas = "<2.0.0"
Pillow = "*"
protobuf = "*"
pycaret = "*"
pydicom = ">1.2.0, <=1.3.0"
PyWavelets = "*"
ray = { version = "*", extras = ["default"] }
scikit_image = "*"
scipy = "*"
setuptools = "*"
SimpleITK = "*"
scikit_learn = "*"
seaborn = "*"
Sphinx = "*"
sphinx-carousel = "1.2.0"
sphinx-jsonschema = "1.19.1"
sphinx-rtd-dark-mode = "1.2.4"
tqdm = "*"
wget = "*"
tabulate = "*"
xgboost = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
